--- a/preview-environments/pr-generator/pr-generator.yml
+++ b/preview-environments/pr-generator/pr-generator.yml
@@ -11,8 +11,8 @@ spec:
       github:
         owner: ashal148148
         repo: gitops-cert-level-3-examples
-        filters: 
-        - labels: ["preview-ready"]
+        labels:
+        - preview-ready
       requeueAfterSeconds: 180
   template:
     metadata:
